# novatel

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Findnovatel.cmake  Makefile  README.md  TODO.md  novatel.sublime-project  package.xml
examples/: novatel_example.cpp  novatel_read_bestutm.cpp  novatel_read_from_file.cpp
examples/NovatelData/: test1_rcvr1.ASC  test1_rcvr2.ASC  test2_rcvr1.ASC  test2_rcvr1_decompressed.ASC  test2_rcvr2.ASC
include/novatel/: generate_crc.hpp  novatel.h  novatel_enums.h  novatel_structures.h
launch/: novatel.launch  novatel_for_dgps.launch  novatel_for_psr.launch
scripts/: configure_rtk_base.py  configure_rtk_rover.py
src/: novatel.cpp  novatel_node.cpp  novatel_node.cpp.orig
tests/: novatel_tests.cpp
tests/test_data/: MorePropak.ASC  MorePropak.GPS  OnceEachAgain.ASC  OnceEachAgain.GPS  OneEach.ASC  OneEach.GPS  ParsingData.ASC  ParsingData.GPS  ParsingData2.ASC  ParsingData2.GPS  PropakWithGlonass.ASC  PropakWithGlonass.GPS
